# motion_capture_system

./: Dockerfile
mocap_base/: CMakeLists.txt  package.xml
mocap_base/include/mocap_base/: KalmanFilter.h  MoCapDriverBase.h
mocap_base/src/: KalmanFilter.cpp  MoCapDriverBase.cpp
mocap_vicon/: CMakeLists.txt  package.xml
mocap_vicon/config/: model_list.yaml
mocap_vicon/include/mocap_vicon/: ViconDriver.h
mocap_vicon/launch/: vicon.launch  vicon_launch.py  vicon_launch.xml
mocap_vicon/src/: ViconDriver.cpp  vicon.cpp
mocap_vicon/src/vicon_sdk/: CMakeLists.txt
mocap_vicon/src/vicon_sdk/Vicon/CrossMarket/DataStream/ViconDataStreamSDK_CPP/: DataStreamClient.cpp  DataStreamClient.h
