<?xml version="1.0"?>
<package format="3">
  <name>mocap_vicon</name>
  <version>0.0.1</version>
  <description>Driver for Vicon</description>

  <maintainer email="sunke.polyu@gmail.com">Ke Sun</maintainer>
  <maintainer email="kartikmohta@gmail.com">Kartik Mohta</maintainer>
  <maintainer email="kashishgarg9@gmail.com">Kashsh Garg</maintainer>

  <license>Apache-2.0</license>

  <author>Ke Sun</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  


  <exec_depend>ros2launch</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf_conversions</exec_depend>
  <exec_depend>mocap_base</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
